# libigl

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .hgignore  .mailmap  .travis.yml  ACKNOWLEDGEMENTS  CMakeLists.txt  CoMISo  EPS.cpp  EPS.h  LICENSE  LICENSE.TXT  LICENSE.md  LibiglOptions.cmake.sample  Makefile  Makefile.conf  ONE.h  PI.h  README.md  RELEASE_HISTORY.md  RELEASE_HISTORY.txt  ReAntTweakBar.h  Timer.h  VERSION.txt  ZERO.h  adjacency_list.cpp  adjacency_list.h  adjacency_matrix.cpp  adjacency_matrix.h  all_pairs_distances.cpp  all_pairs_distances.h  axis_angle_to_quat.cpp  axis_angle_to_quat.h  azure-pipelines.yml  basename.h  before-submitting-pull-request.md  boundary_faces.cpp  boundary_faces.h  (+218 more)
cmake/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  FindLIBCOMISOH.cmake  FindMATLAB.cmake  FindMOSEK.cmake  LibiglDownloadExternal.cmake  LibiglFolders.cmake  LibiglWindows.cmake  libigl-cgal.yml  libigl-config.cmake.in  libigl.cmake
cmake/find/: FindGMP.cmake  FindMPFR.cmake
cmake/igl/: igl_add_library.cmake  igl_add_test.cmake  igl_add_tutorial.cmake  igl_copy_dll.cmake  igl_glob_sources.cmake  igl_include.cmake  igl_install.cmake  igl_install_headers.cmake  igl_target_sources.cmake  igl_windows.cmake  libigl-config.cmake.in  libigl-copyleft-cgal-config.cmake.in  libigl-copyleft-comiso-config.cmake.in  libigl-copyleft-core-config.cmake.in  libigl-copyleft-tetgen-config.cmake.in  libigl-core-config.cmake.in  libigl-embree-config.cmake.in  libigl-embree-config.cmake.ing  libigl-glfw-config.cmake.in  libigl-imgui-config.cmake.in  libigl-opengl-config.cmake.in  libigl-png-config.cmake.in  libigl-xml-config.cmake.in
cmake/recipes/: boost.cmake  cgal.cmake  comiso.cmake  cork.cmake  eigen.cmake  embree.cmake  glad.cmake  imgui.cmake  imgui_fonts.cmake  predicates.cmake  stb.cmake  tinyxml2.cmake  triangle.cmake
optional/: CMakeLists.txt  README.md  index.html
python/: 001_BasicTypes.py  101_FileIO.py  102_DrawMesh.m  102_DrawMesh.py  102_DrawMeshTCP.py  103_Events.py  104_Colors.py  105_Overlays.py  201_Normals.py  202_GaussianCurvature.py  203_CurvatureDirections.py  204_Gradient.py  205_Laplacian.py  301_Slice.py  302_Sort.py  303_LaplaceEquation.py  304_LinearEqualityConstraints.py  305_QuadraticProgramming.py  306_EigenDecomposition.py  401_BiharmonicDeformation.py  402_PolyharmonicDeformation.py  405_AsRigidAsPossible.py  501_HarmonicParam.py  502_LSCMParam.py  503_ARAPParam.py  504_NRosyDesign.py  505_MIQ.py  CMakeLists.txt  README.md  iglhelpers.py  mk_py_doc.py  py_doc.cpp  py_doc.cpp.REMOVED.git-id  py_doc.h  py_igl.cpp  py_igl_comiso.cpp  py_igl_viewer.cpp  py_vector.cpp  python.cpp  python.h  (+7 more)
python/copyleft/: py_igl_comiso.cpp
python/matlab/: CurvatureDirections.m  example1.m  example2.m  launch_viewer.m  m2p.m  p2m.m  t102DrawMesh.m
python/modules/: py_igl_bbw.cpp  py_igl_embree.cpp  py_igl_geodesic.cpp  py_igl_opengl_glfw.cpp  py_igl_png.cpp  py_igl_triangle.cpp  py_igl_viewer.cpp  py_typedefs.cpp  py_typedefs.h  py_vector.cpp
python/py_igl/: py_AABB.cpp  py_ARAPEnergyType.cpp  py_MappingEnergyType.cpp  py_MeshBooleanType.cpp  py_SolverStatus.cpp  py_active_set.cpp  py_adjacency_list.cpp  py_adjacency_matrix.cpp  py_arap.cpp  py_avg_edge_length.cpp  py_barycenter.cpp  py_barycentric_coordinates.cpp  py_barycentric_to_global.cpp  py_bbw.cpp  py_boundary_conditions.cpp  py_boundary_facets.cpp  py_boundary_loop.cpp  py_cat.cpp  py_collapse_edge.cpp  py_colon.cpp  py_colormap.cpp  py_column_to_quats.cpp  py_comb_cross_field.cpp  py_comb_frame_field.cpp  py_compute_frame_field_bisectors.cpp  py_copyleft_tetgen_tetrahedralize.cpp  py_cotmatrix.cpp  py_covariance_scatter_matrix.cpp  py_cross_field_mismatch.cpp  py_cross_field_missmatch.cpp  py_cut_mesh_from_singularities.cpp  py_deform_skeleton.cpp  py_dirac.cpp  py_directed_edge_orientations.cpp  py_directed_edge_parents.cpp  py_doublearea.cpp  py_dqs.cpp  py_edge_lengths.cpp  py_edge_topology.cpp  py_eigs.cpp  (+70 more)
python/scripts/: Problematic_functions  basic_function.mako  errors.txt  files.txt  generate_bindings.py  generate_docstrings.py  headers.dat.REMOVED.git-id  parser.py  py_igl.mako  python_shared.mako
python/tutorial/: 001_BasicTypes.py  101_FileIO.py  102_DrawMesh.py  102_DrawMeshTCP.py  102_DrawMesh_TCP.py  103_Events.py  104_Colors.py  105_Overlays.py  106_ViewerMenu.py  201_Normals.py  202_GaussianCurvature.py  203_CurvatureDirections.py  204_Gradient.py  205_Laplacian.py  301_Slice.py  302_Sort.py  303_LaplaceEquation.py  304_LinearEqualityConstraints.py  305_QuadraticProgramming.py  306_EigenDecomposition.py  401_BiharmonicDeformation.py  402_PolyharmonicDeformation.py  403_BoundedBiharmonicWeights.py  404_DualQuaternionSkinning.py  405_AsRigidAsPossible.py  501_HarmonicParam.py  502_LSCMParam.py  503_ARAPParam.py  504_NRosyDesign.py  505_MIQ.py  507_Planarization.py  507_PolyVectorField.py  509_Planarization.py  604_Triangle.py  605_Tetgen.py  606_AmbientOcclusion.py  607_Picking.py  607_ScreenCapture.py  609_Boolean.py  701_Statistics.py  (+8 more)
shared/cmake/: CMakeLists.txt  CXXFeatures.cmake  FindCGAL.cmake  FindMATLAB.cmake  FindMOSEK.cmake  libigl-config.cmake.in  libigl.cmake
tests/: CMakeLists.txt  Settings.cmake  main.cpp  test_common.h
tests/data/: bunny.ply  duplicated_faces_F.dmat  duplicated_faces_N1.dmat  duplicated_faces_N2.dmat  duplicated_faces_V.dmat  two-boxes-bad-self-union.ply
tests/find_package/: CMakeLists.txt
tests/fuzzing/: igl_fuzzer.cpp
tests/install-find-use/: CMakeLists.txt
tutorial/: 100_Introduction to libigl.md  500_Parametrization.md  600_External_libraries.md  CMakeLists.shared  CMakeLists.txt  coding-guidelines.html  compile_dependencies_linux.sh  compile_dependencies_macosx.sh  compile_example.sh  compile_example_xcode.sh  compile_macosx.sh  index.html  readme.md  style.css  tutorial.html  tutorial.html.REMOVED.git-id  tutorial.md  tutorial.md.REMOVED.git-id  tutorial_shared_path.h  tutorial_shared_path.h.in
tutorial/1001_LipschitzOctree/: main.cpp
tutorial/1002_AABB/: main.cpp
tutorial/1002_EytzingerAABB/: main.cpp  (+1 more)
(+2841 files in other folders)
